<resources>
    <string name="app_name">aposs-admin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_account">Xác nhận xóa tài khoản</string>
    <string name="delete_confirm">Xác nhận</string>
    <string name="delete_cancel">Thoát</string>
    <string name="home">Trang chủ</string>
    <string name="favorite">Yêu thích</string>
    <string name="cart">Giỏ hàng</string>
    <string name="message">Tin nhắn</string>
    <string name="person">Cá nhân</string>
    <string name="about_us">About us</string>
    <string name="image">hình ảnh</string>
    <string name="default_price">Giá: </string>
    <string name="purchase">550 lượt mua</string>
    <string name="Category">Danh mục</string>
    <string name="show_all">Tất cả</string>
    <string name="products">1257 sản phẩm</string>
    <string name="ranking">Xếp hạng</string>
    <string name="more">Sản phẩm khác</string>
    <string name="type_here">Soạn tin nhắn</string>
    <string name="contact">Liên lạc với chúng tôi ngay</string>
    <string name="cart_empty">Không có gì ở giỏ hàng, xem thêm các sản phẩm khác nhé</string>
    <string name="cart_empty_2">Không có gì ở giỏ hàng\nXem thêm các sản phẩm khác nhé</string>
    <string name="account">Tài khoản</string>
    <string name="defaultCartNumber">1</string>
    <string name="add_to_cart">Thêm vào giỏ hàng</string>
    <string name="buy_now">Mua ngay</string>
    <string name="available_quantities">Số lượng tồn kho: </string>
    <string name="available_quantities_number">480</string>
    <string name="detail">Chi tiết sản phẩm</string>
    <string name="sample_details">Albert Einstein (/ˈaɪnstaɪn/ EYEN-styne;[4] German: [ˈalbɛʁt ˈʔaɪnʃtaɪn] (About this soundlisten); 14 March 1879 – 18 April 1955) was a German-born theoretical physicist,[5] widely acknowledged to be one of the greatest physicists of all time. Einstein is best known for developing the theory of relativity, but he also made important contributions to the development of the theory of quantum mechanics. Relativity and quantum mechanics are together the two pillars of modern physics.[3][6] His mass–energy equivalence formula E = mc2, which arises from relativity theory, has been dubbed "the world's most famous equation".[7] His work is also known for its influence on the philosophy of science.[8][9] He received the 1921 Nobel Prize in Physics "for his services to theoretical physics, and especially for his discovery of the law of the photoelectric effect",[10] a pivotal step in the development of quantum theory. His intellectual achievements and originality resulted in "Einstein" becoming synonymous with "genius".[11]</string>
    <string name="show_less">Ít hơn</string>
    <string name="rating">Đánh giá</string>
    <string name="rating_sample">4.2</string>
    <string name="reviews">1084 đánh giá</string>
    <string name="the_same_kind">SẢN PHẨM THÊM LOẠI</string>
    <string name="time_sample">13:12</string>
    <string name="all">Tất cả</string>
    <string name="cancel">Đã hủy</string>
    <string name="amount">Tổng:</string>
    <string name="categories">Các danh mục</string>
    <string name="search">Tìm kiếm</string>

    <string-array name="filter">
        <item>ALL</item>
        <item>Hình ảnh</item>
        <item>5 sao</item>
        <item>4 sao</item>
        <item>3 sao</item>
        <item>2 sao</item>
        <item>1 sao</item>
    </string-array>
    <string name="my_details">My details</string>
    <string name="slogan">Nắm bắt vận mệnh, khai phá thiên cơ</string>
    <string name="do_not_have_account">Chưa có tài khoản?</string>
    <string name="sign_up">Đăng kí</string>
    <string name="sign_in">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="forgot_password">Quên mật khẩu?</string>
    <string name="or_sign_in_with">Hoặc đăng nhập với</string>
    <string name="already_have_an_account">Đã có tài khoản?</string>
    <string name="or_sign_up_with">Hoặc đăng kí với</string>
    <string name="full_name">Họ và tên</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="your_account_has_been_verified_successfully">Tài khoản của bạn \nđã xác nhận thành công</string>
    <string name="please_verify">Xác nhận tài khoản</string>
    <string name="your">của bạn</string>
    <string name="cell_number">Số điện thoại</string>
    <string name="verify_content_text">Hãy ấn nút kích hoạt\ntrong email chúng tôi gửi đến bạn</string>
    <string name="via_sms_message">Quan tin nhắc hoặc</string>
    <string name="change">
        <u>
            Thay đổi
        </u>
    </string>
    <string name="your_number">số điện thoại.</string>
    <string name="resend_otp">
        <u>
            gửi lại email xác nhận
        </u>
    </string>
    <string name="notify_time">7:17 10/10/2021</string>
    <string name="see_now">Xem ngay</string>
    <string name="notification">Thông báo</string>
    <string name="my_orders">Quản lý đơn hàng</string>
    <string name="pending">Chờ xác nhận</string>
    <string name="delivering">Đang giao</string>
    <string name="confirmed">Xác nhận</string>
    <string name="pass_order">Đã giao</string>
    <string name="tap_to_view_detail">Chọn để xem chi tiết</string>
    <string name="cancel_order">Hủy đơn hàng</string>
    <string name="order_time">Thời gian đặt:</string>
    <string name="status">Trạng thái:</string>
    <string name="address">Địa chỉ nhận hàng</string>
    <string name="billing_items">Chi tiết đơn</string>
    <string name="rating_now">Đánh giá ngay</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="your_order_is_empty">Đơn hàng đang trống</string>
    <string name="go_to_buy_now">đi đến mua ngay!</string>
    <string name="items">Đơn hàng</string>
    <string name="you_want_to">Bạn muốn</string>
    <string name="order">đơn hàng :(</string>
    <string name="order_cancel_text">Hãy cho chúng tôi biết lý do\nđể cải thiện dịch vụ mua sắm\ntốt hơn cho bạn!.</string>
    <string name="your_reason_here">Điền lý do của bạn</string>
    <string name="your_order_cancel_successfully">Bạn đã hủy đơn hàng thành công</string>
    <string name="order_confirm_text">Chúng tôi thành thật xin lỗi\ncho những trải nghiệm không\ntốt của bạn</string>
    <string name="continue_shopping">Tiếp tục mua sắm</string>
    <string name="check_out_policy">By placing your order you agree to our terms and conditions, privacy and returns policies and consent to some of your data being stored by Aposs which may be used to make future shopping experiences better for you.</string>
    <string name="total">Tổng tiền: </string>
    <string name="see_all_items_in_detail">
        <u>Xem toàn bộ tại chi tiết</u>
    </string>
    <string name="write_your_comment_here">Viết bình luận của bạn ở đây!</string>
    <string name="add_image">Thêm hình ảnh</string>
    <string name="set_as_default_address">Lưu như địa chỉ mặc định</string>
    <string name="my_address">Địa chỉ của tôi</string>
    <string name="default_cart_number">1</string>
    <string name="default_address_guide">Ấn để chọn địa chỉ</string>
    <string name="add_new_address_guide">Thêm địa chỉ</string>
    <string name="loading_failed_x_x">Tải thất bại x.x</string>
    <string name="name_tag">Họ và tên</string>
    <string name="phone_tag">Số điện thoại</string>
    <string name="gender_tag">Giới tính</string>
    <string name="city_tag">Thành phố/ tỉnh</string>
    <string name="district_tag">Quận/ huyện</string>
    <string name="ward_tag">Phường/ xã</string>
    <string name="address_lane_tag">Chi tiết</string>
    <string name="delete">Xóa</string>
    <string name="edit">Chỉnh sửa</string>
    <string name="add_new"><u>Thêm mới</u></string>
    <string name="submit">Lưu</string>
    <string name="check_out">Thanh toán</string>
    <string name="title_activity_cart">CartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Tiếp theo</string>
    <string name="previous">Trước đó</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sort_by">Xem theo:</string>
    <string name="purchased">Lượt mua</string>
    <string name="product">Sản phẩm</string>
    <string name="confirm">Xác nhận</string>
    <string name="your_order_placed">Đặt hàng thành công</string>
    <string name="check_out_success_message">Đặt hàng thành công.\nBạn có thể đi đến đơn hàng để kiếm tra tình trạng giao hàng</string>
    <string name="received">Đã nhận</string>
    <string name="are_you_sure_that_you_ve_already_received_this_order">Bạn có chắc chắn đã nhận được đơn hàng này?</string>
    <string name="top_purchased">Top lượt mua</string>
    <string name="choose_address">Chọn địa chỉ</string>
    <string name="xem_t_ng_h_p_ngay">Xem độ tương hợp ngay</string>
    <string name="xem_t_ng_h_p">Xem độ tương hợp</string>
    <string name="h_nh">Hành:</string>
    <string name="nh_p_ng_y_th_ng_n_m_sinh_c_a_b_n">Chọn ngày tháng năm sinh của bạn</string>
    <string name="date">d/m/yyyy</string>
    <string name="xem_ngay">Xem ngay</string>
    <string name="customer_date_picker_error_guild">Vui lòng nhập ngày sinh theo định dạng d/m/yyyy</string>
    <string name="nature_loading_message">Đang tính toán độ tương hợp</string>
    <string name="ch_n_gi_i_t_nh_c_a_b_n">Chọn giới tính của bạn</string>
    <string name="canceled">Đã hủy</string>
    <string name="your_destiny">Cung mệnh của bạn:</string>
    <string name="your_suitable">Sự tương hợp của bạn với sản phẩm</string>
    <string name="gi_i_th_ch">Giải thích</string>
    <string name="th_m_l_i_khuy_n_cho_ng_i_m_nh">Thêm lời khuyên cho người mệnh</string>
    <string name="manage_banking_information">Quản lý thông tin thanh toán</string>
    <string name="save">Lưu</string>
    <string name="bank_name">Tên ngân hàng:</string>
    <string name="branch_name">Chi nhánh:</string>
    <string name="accountNumber">Số tài khoản</string>
    <string name="receiverName">Tên người nhận:</string>
    <string name="bankingContent">Nội dung chuyển khoản:</string>
    <string name="empty_subcategory">Không có danh mục con nào,\nthêm mới ngay!</string>


</resources>