<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">
<data>
    <variable
        name="viewModel"
        type="com.example.aposs_admin.ui_controller.order_fragment.OrderViewModel" />
</data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:background="@color/back_ground"
    android:layout_height="match_parent"
    tools:context=".ui_controller.order_fragment.OrderFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/back_ground"
        android:text="@string/app_name"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_green"
            app:layout_collapseMode="pin">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:gravity="center|top"
                android:orientation="vertical"
                android:paddingBottom="5dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <ImageView
                        android:id="@+id/back"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:contentDescription="@string/image"
                        android:scaleType="centerCrop"
                        android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginStart="40dp"
                        android:layout_toRightOf="@+id/back"
                        android:text="@string/my_orders"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textFontWeight="600"
                        android:textSize="16dp" />
                </RelativeLayout>

            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:visibility="gone"
        android:orientation="vertical"
        android:id="@+id/emptyOrder"
        android:elevation="2dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:contentDescription="@string/image"
            android:src="@drawable/ic_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="16sp"
                android:textColor="@color/dark_pray"
                android:text="@string/your_order_is_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                android:textSize="16sp"
                android:textColor="@color/active_button"
                android:text="@string/go_to_buy_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>

<!--    <com.google.android.material.bottomnavigation.BottomNavigationView-->
<!--        android:id="@+id/bottomBar"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/light_green"-->
<!--        app:itemIconTint="@color/white"-->
<!--        app:itemRippleColor="@color/white"-->
<!--        app:itemTextColor="@color/black"-->
<!--        android:paddingBottom="16dp"-->
<!--        android:clipToPadding="false"-->
<!--        app:layout_constraintTop_toBottomOf="@id/appBarLayout"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/orders"-->
<!--        app:menu="@menu/menu_order_item" />-->
    <com.google.android.material.tabs.TabLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tabMode="scrollable"
        app:tabTextAppearance="@style/MyCustomTextAppearance"
        android:background="@color/light_green"
        app:tabIndicatorColor="#219653"
        app:tabSelectedTextColor="#219653"
        app:tabIndicatorHeight="3dp"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sv_orders">

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pending"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmed"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delivering"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_order"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/canceled"
            />
    </com.google.android.material.tabs.TabLayout>

    <ScrollView
        android:id="@+id/sv_orders"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf ="@id/bottomBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orders"
        tools:listitem="@layout/item_order"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"
        orderData="@{viewModel.lstDisplay}"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>

