<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="viewModel"
            type="com.example.aposs_admin.viewmodels.OnlineCheckOutInformationViewModel" />
        <variable
            name="status"
            type="com.example.aposs_admin.util.LoadingStatus" />

        <variable
            name="view"
            type="android.view.View" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui_controller.activity.BankingInformationActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/back_ground"
            android:text="@string/app_name"
            android:theme="@style/ThemeOverlay.AppCompat.Light"
            app:layout_constraintTop_toTopOf="parent"
            app:liftOnScroll="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/light_green"
                app:layout_collapseMode="pin">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="20dp"
                    android:gravity="center|top"
                    android:orientation="vertical"
                    android:paddingBottom="5dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp">

                        <ImageView
                            android:id="@+id/back"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/image"
                            android:scaleType="centerCrop"
                            android:src="@drawable/ic_baseline_arrow_back_ios_new_24" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:layout_marginStart="40dp"
                            android:layout_toEndOf="@+id/back"
                            android:text="@string/manage_banking_information"
                            android:textAllCaps="false"
                            android:textColor="@color/black"
                            android:textStyle="normal"
                            android:textSize="16sp" />
                    </RelativeLayout>

                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:visibility="@{viewModel.status == status.Fail? view.VISIBLE: view.GONE}"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/loading_failed_x_x"
            android:textSize="15sp"
            app:drawableTopCompat="@drawable/ic_empty" />

        <ProgressBar
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:visibility="@{viewModel.status == status.Loading?view.VISIBLE: view.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:visibility="@{viewModel.status == status.Success ? view.VISIBLE: view.GONE}"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appBarLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/bank_name"
                android:textColor="@color/edit_user_detail_color"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/bankName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="name"
                android:background="@drawable/bg_edit_user_detail"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="15dp"
                android:text="@={viewModel.bankingInformationDTO.bankName}"
                android:textSize="16sp"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/branch_name"
                android:textColor="@color/edit_user_detail_color"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/branchName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="name"
                android:background="@drawable/bg_edit_user_detail"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="15dp"
                android:text="@={viewModel.bankingInformationDTO.branch}"
                android:textSize="16sp"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/accountNumber"
                android:textColor="@color/edit_user_detail_color"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/accountNumber"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="name"
                android:background="@drawable/bg_edit_user_detail"
                android:maxLines="1"
                android:paddingHorizontal="15dp"
                android:text="@={viewModel.bankingInformationDTO.accountNumber}"
                android:textSize="16sp"
                tools:ignore="LabelFor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/receiverName"
                android:textColor="@color/edit_user_detail_color"
                android:textSize="14sp" />

            <EditText
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:id="@+id/receiver"
                android:layout_height="44dp"
                android:layout_marginBottom="5dp"
                android:autofillHints="name"
                android:background="@drawable/bg_edit_user_detail"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="15dp"
                android:text="@={viewModel.bankingInformationDTO.receiverName}"
                android:textSize="16sp"
                tools:ignore="LabelFor" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/saveNewBankingInformation"
            android:visibility="@{viewModel.status == status.Success ? view.VISIBLE: view.GONE}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="@{viewModel.isChangeable}"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="11dp"
            android:background="@{viewModel.isChangeable ? @drawable/bg_button_checkout : @drawable/bg_disable_change_banking_information}"
            android:text="@string/save"
            android:textAllCaps="false"
            android:textColor="@{viewModel.isChangeable ?  @color/white : @color/black}"
            android:textSize="16sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
