<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>

        <variable
            name="viewModel"
            type="com.example.aposs_admin.ui_controller.login_fragment.LogInViewModel" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui_controller.login_fragment.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/splash_smaller"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/sign_in"
                android:textColor="@color/dark_blue"
                android:textSize="32sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/ic_message"
                android:id="@+id/emailLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="15dp"
                android:hint="@string/email"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/disable_pray"
                app:boxStrokeWidth="1dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.email}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                app:startIconDrawable="@drawable/ic_lock"
                android:id="@+id/passwordLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                app:boxCornerRadiusBottomEnd="8dp"
                app:boxCornerRadiusBottomStart="8dp"
                app:boxCornerRadiusTopEnd="8dp"
                app:boxCornerRadiusTopStart="8dp"
                app:boxStrokeColor="@color/disable_pray"
                app:boxStrokeWidth="1dp"
                app:endIconMode="password_toggle"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:padding="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/signIn"
                android:layout_width="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_height="55dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_login_button_light_green"
                android:elevation="5dp"
                android:onClick="@{() -> viewModel.onLoginClick()}"
                android:textAllCaps="false"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="17sp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
</layout>